--- a/css/wedding.css
+++ b/css/wedding.css
@@ -327,6 +327,23 @@ header {
   border-radius: 6px;
 }
 
+.map__box {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 41.63%;
+  border-radius: 16px;
+}
+
+.map__api {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .schedule {
   margin-top: 16vw;
 }
@@ -351,7 +368,7 @@ header {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  width: 10.66667vw;
+  width: calc(100% / 7);
   height: 10.66667vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
