--- a/css/wedding.css
+++ b/css/wedding.css
@@ -395,6 +395,8 @@ header {
   border-radius: 50%;
   content: '';
   z-index: -1;
+  -webkit-animation: scale 1.2s infinite alternate;
+          animation: scale 1.2s infinite alternate;
 }
 
 .schedule__item:nth-child(7) ~ .schedule__item {
@@ -522,5 +524,416 @@ header {
 
 .address__dd + .address__dt {
   margin-top: 5.33333vw;
+}
+
+@-webkit-keyframes scale {
+  0% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+    opacity: 0.9;
+  }
+  100% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 1;
+  }
+}
+
+@keyframes scale {
+  0% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+    opacity: 0.9;
+  }
+  100% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 1;
+  }
+}
+
+.night {
+  position: absolute;
+  top: -13.33333vw;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+
+.shooting_star {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(214, 184, 44, 0.5), rgba(0, 0, 255, 0));
+  border-radius: 999px;
+  -webkit-filter: drop-shadow(0 0 6px #dac771);
+          filter: drop-shadow(0 0 6px #dac771);
+  -webkit-animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+          animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+}
+
+.shooting_star::before {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #d6b82c, rgba(0, 0, 255, 0));
+  -webkit-transform: translateX(50%) rotateZ(45deg);
+          transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+}
+
+.shooting_star::after {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #d6b82c, rgba(0, 0, 255, 0));
+  -webkit-transform: translateX(50%) rotateZ(45deg);
+          transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+  -webkit-transform: translateX(50%) rotateZ(-45deg);
+          transform: translateX(50%) rotateZ(-45deg);
+}
+
+.shooting_star:nth-child(1) {
+  top: calc(50% - -27px);
+  left: calc(50% - 153px);
+  -webkit-animation-delay: 6600ms;
+          animation-delay: 6600ms;
+}
+
+.shooting_star:nth-child(1)::before, .shooting_star:nth-child(1)::after {
+  -webkit-animation-delay: 6600ms;
+          animation-delay: 6600ms;
+}
+
+.shooting_star:nth-child(2) {
+  top: calc(50% - -46px);
+  left: calc(50% - 241px);
+  -webkit-animation-delay: 3111ms;
+          animation-delay: 3111ms;
+}
+
+.shooting_star:nth-child(2)::before, .shooting_star:nth-child(2)::after {
+  -webkit-animation-delay: 3111ms;
+          animation-delay: 3111ms;
+}
+
+.shooting_star:nth-child(3) {
+  top: calc(50% - 13px);
+  left: calc(50% - 270px);
+  -webkit-animation-delay: 442ms;
+          animation-delay: 442ms;
+}
+
+.shooting_star:nth-child(3)::before, .shooting_star:nth-child(3)::after {
+  -webkit-animation-delay: 442ms;
+          animation-delay: 442ms;
+}
+
+.shooting_star:nth-child(4) {
+  top: calc(50% - -139px);
+  left: calc(50% - 110px);
+  -webkit-animation-delay: 2385ms;
+          animation-delay: 2385ms;
+}
+
+.shooting_star:nth-child(4)::before, .shooting_star:nth-child(4)::after {
+  -webkit-animation-delay: 2385ms;
+          animation-delay: 2385ms;
+}
+
+.shooting_star:nth-child(5) {
+  top: calc(50% - 95px);
+  left: calc(50% - 129px);
+  -webkit-animation-delay: 4601ms;
+          animation-delay: 4601ms;
+}
+
+.shooting_star:nth-child(5)::before, .shooting_star:nth-child(5)::after {
+  -webkit-animation-delay: 4601ms;
+          animation-delay: 4601ms;
+}
+
+.shooting_star:nth-child(6) {
+  top: calc(50% - -84px);
+  left: calc(50% - 43px);
+  -webkit-animation-delay: 3760ms;
+          animation-delay: 3760ms;
+}
+
+.shooting_star:nth-child(6)::before, .shooting_star:nth-child(6)::after {
+  -webkit-animation-delay: 3760ms;
+          animation-delay: 3760ms;
+}
+
+.shooting_star:nth-child(7) {
+  top: calc(50% - -55px);
+  left: calc(50% - 267px);
+  -webkit-animation-delay: 6240ms;
+          animation-delay: 6240ms;
+}
+
+.shooting_star:nth-child(7)::before, .shooting_star:nth-child(7)::after {
+  -webkit-animation-delay: 6240ms;
+          animation-delay: 6240ms;
+}
+
+.shooting_star:nth-child(8) {
+  top: calc(50% - 22px);
+  left: calc(50% - 49px);
+  -webkit-animation-delay: 9269ms;
+          animation-delay: 9269ms;
+}
+
+.shooting_star:nth-child(8)::before, .shooting_star:nth-child(8)::after {
+  -webkit-animation-delay: 9269ms;
+          animation-delay: 9269ms;
+}
+
+.shooting_star:nth-child(9) {
+  top: calc(50% - -91px);
+  left: calc(50% - 146px);
+  -webkit-animation-delay: 5492ms;
+          animation-delay: 5492ms;
+}
+
+.shooting_star:nth-child(9)::before, .shooting_star:nth-child(9)::after {
+  -webkit-animation-delay: 5492ms;
+          animation-delay: 5492ms;
+}
+
+.shooting_star:nth-child(10) {
+  top: calc(50% - 166px);
+  left: calc(50% - 212px);
+  -webkit-animation-delay: 9113ms;
+          animation-delay: 9113ms;
+}
+
+.shooting_star:nth-child(10)::before, .shooting_star:nth-child(10)::after {
+  -webkit-animation-delay: 9113ms;
+          animation-delay: 9113ms;
+}
+
+.shooting_star:nth-child(11) {
+  top: calc(50% - -153px);
+  left: calc(50% - 156px);
+  -webkit-animation-delay: 6995ms;
+          animation-delay: 6995ms;
+}
+
+.shooting_star:nth-child(11)::before, .shooting_star:nth-child(11)::after {
+  -webkit-animation-delay: 6995ms;
+          animation-delay: 6995ms;
+}
+
+.shooting_star:nth-child(12) {
+  top: calc(50% - 57px);
+  left: calc(50% - 246px);
+  -webkit-animation-delay: 4123ms;
+          animation-delay: 4123ms;
+}
+
+.shooting_star:nth-child(12)::before, .shooting_star:nth-child(12)::after {
+  -webkit-animation-delay: 4123ms;
+          animation-delay: 4123ms;
+}
+
+.shooting_star:nth-child(13) {
+  top: calc(50% - -101px);
+  left: calc(50% - 112px);
+  -webkit-animation-delay: 8289ms;
+          animation-delay: 8289ms;
+}
+
+.shooting_star:nth-child(13)::before, .shooting_star:nth-child(13)::after {
+  -webkit-animation-delay: 8289ms;
+          animation-delay: 8289ms;
+}
+
+.shooting_star:nth-child(14) {
+  top: calc(50% - -187px);
+  left: calc(50% - 192px);
+  -webkit-animation-delay: 2231ms;
+          animation-delay: 2231ms;
+}
+
+.shooting_star:nth-child(14)::before, .shooting_star:nth-child(14)::after {
+  -webkit-animation-delay: 2231ms;
+          animation-delay: 2231ms;
+}
+
+.shooting_star:nth-child(15) {
+  top: calc(50% - -156px);
+  left: calc(50% - 169px);
+  -webkit-animation-delay: 9308ms;
+          animation-delay: 9308ms;
+}
+
+.shooting_star:nth-child(15)::before, .shooting_star:nth-child(15)::after {
+  -webkit-animation-delay: 9308ms;
+          animation-delay: 9308ms;
+}
+
+.shooting_star:nth-child(16) {
+  top: calc(50% - -55px);
+  left: calc(50% - 140px);
+  -webkit-animation-delay: 8138ms;
+          animation-delay: 8138ms;
+}
+
+.shooting_star:nth-child(16)::before, .shooting_star:nth-child(16)::after {
+  -webkit-animation-delay: 8138ms;
+          animation-delay: 8138ms;
+}
+
+.shooting_star:nth-child(17) {
+  top: calc(50% - 8px);
+  left: calc(50% - 258px);
+  -webkit-animation-delay: 5136ms;
+          animation-delay: 5136ms;
+}
+
+.shooting_star:nth-child(17)::before, .shooting_star:nth-child(17)::after {
+  -webkit-animation-delay: 5136ms;
+          animation-delay: 5136ms;
+}
+
+.shooting_star:nth-child(18) {
+  top: calc(50% - -143px);
+  left: calc(50% - 22px);
+  -webkit-animation-delay: 7851ms;
+          animation-delay: 7851ms;
+}
+
+.shooting_star:nth-child(18)::before, .shooting_star:nth-child(18)::after {
+  -webkit-animation-delay: 7851ms;
+          animation-delay: 7851ms;
+}
+
+.shooting_star:nth-child(19) {
+  top: calc(50% - 33px);
+  left: calc(50% - 300px);
+  -webkit-animation-delay: 2032ms;
+          animation-delay: 2032ms;
+}
+
+.shooting_star:nth-child(19)::before, .shooting_star:nth-child(19)::after {
+  -webkit-animation-delay: 2032ms;
+          animation-delay: 2032ms;
+}
+
+.shooting_star:nth-child(20) {
+  top: calc(50% - -181px);
+  left: calc(50% - 280px);
+  -webkit-animation-delay: 5374ms;
+          animation-delay: 5374ms;
+}
+
+.shooting_star:nth-child(20)::before, .shooting_star:nth-child(20)::after {
+  -webkit-animation-delay: 5374ms;
+          animation-delay: 5374ms;
+}
+
+@-webkit-keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@-webkit-keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@-webkit-keyframes shooting {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+}
+
+@keyframes shooting {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+}
+
+@-webkit-keyframes sky {
+  0% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
+  }
+}
+
+@keyframes sky {
+  0% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(405deg);
+            transform: rotate(405deg);
+  }
 }
 /*# sourceMappingURL=wedding.css.map */
